--- a/css/styles.css
+++ b/css/styles.css
@@ -399,10 +399,8 @@ nav #hamburger-menu {
     z-index: 1;
     margin-top: 30px;
     margin-left: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    border-radius: 25px;
+
 
 
 
@@ -413,7 +411,8 @@ nav #hamburger-menu {
   .nav-list {
 
     display: block;
-    margin: 24px 0%;
+    margin: 20px 5%;
+    font-size: 2.5rem;
 
   }
 
